--- a/style.css
+++ b/style.css
@@ -678,3 +678,26 @@ footer span a:hover{
         line-height: 38px;
     }
 }
+
+.grid-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+
+.empty-div{
+    display: hidden;
+}
+
+.align-left{
+    text-align: left;
+}
+
+.social{
+    font-size: 1.5rem;
+    color: crimson;
+    padding-right: 4px;
+}
+
+.social-link:hover{
+    cursor: alias;
+}
